cmake_minimum_required(VERSION 2.8)
PROJECT(test)

MESSAGE(STATUS SLD_PARSER_BIN_DIR=${SLD_PARSER_BIN_DIR})
MESSAGE(STATUS SLD_PARSER_OUTPUT_NAME=${SLD_PARSER_OUTPUT_NAME})

SET(CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

INCLUDE(cmake/FindCppUnit.cmake)

FIND_PACKAGE(CppUnit)

INCLUDE_DIRECTORIES(${CPPUNIT_INCLUDE_DIR} 
					${LIBXML2_INCLUDE_DIR} 
					"../include"
   				    )

LINK_DIRECTORIES(${SLD_PARSER_BIN_DIR}/test)

FILE(GLOB HEADERS "*.h")
FILE(GLOB SOURCES "*.cpp")

ADD_EXECUTABLE(test ${HEADERS} ${SOURCES} )
TARGET_LINK_LIBRARIES(test ${CPPUNIT_LIBRARIES} ${SLD_PARSER_OUTPUT_NAME})

ADD_CUSTOM_COMMAND(
    TARGET test
    POST_BUILD
    COMMAND ${CMAKE_COMMAND} -E 
    copy ARGS ${CMAKE_CURRENT_SOURCE_DIR}/style_1.sld
			  ${CMAKE_CURRENT_BINARY_DIR}
)
